kubernetes/api-gateway/kong/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kong
  labels:
    app: kong
    environment: production
